# ChangeLog for sys-kernel/tuxonice-sources
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/tuxonice-sources/ChangeLog,v 1.205 2014/09/22 21:04:23 floppym Exp $

*tuxonice-sources-3.14.19 (22 Sep 2014)
*tuxonice-sources-3.16.3 (22 Sep 2014)
*tuxonice-sources-3.10.55 (22 Sep 2014)
*tuxonice-sources-3.12.28 (22 Sep 2014)

  22 Sep 2014; Mike Gilbert <floppym@gentoo.org>
  +tuxonice-sources-3.10.55.ebuild, +tuxonice-sources-3.12.28.ebuild,
  +tuxonice-sources-3.14.19.ebuild, +tuxonice-sources-3.16.3.ebuild:
  Version bumps. Ebuilds by Arfrever.

  18 Aug 2014; Mike Gilbert <floppym@gentoo.org>
  -tuxonice-sources-3.10.49.ebuild, -tuxonice-sources-3.10.50.ebuild,
  -tuxonice-sources-3.10.51.ebuild, -tuxonice-sources-3.12.24.ebuild,
  -tuxonice-sources-3.12.25.ebuild, -tuxonice-sources-3.14.13.ebuild,
  -tuxonice-sources-3.14.14.ebuild, -tuxonice-sources-3.14.15.ebuild,
  -tuxonice-sources-3.15.6.ebuild, -tuxonice-sources-3.15.7.ebuild,
  -tuxonice-sources-3.15.8.ebuild, -tuxonice-sources-3.4.100.ebuild,
  -tuxonice-sources-3.4.101.ebuild, -tuxonice-sources-3.4.99.ebuild:
  Remove old per Arfrever.

*tuxonice-sources-3.4.103 (16 Aug 2014)
*tuxonice-sources-3.10.53 (16 Aug 2014)
*tuxonice-sources-3.16.1 (16 Aug 2014)
*tuxonice-sources-3.15.10 (16 Aug 2014)
*tuxonice-sources-3.14.17 (16 Aug 2014)

  16 Aug 2014; Mike Gilbert <floppym@gentoo.org>
  +tuxonice-sources-3.10.53.ebuild, +tuxonice-sources-3.14.17.ebuild,
  +tuxonice-sources-3.15.10.ebuild, +tuxonice-sources-3.16.1.ebuild,
  +tuxonice-sources-3.4.103.ebuild:
  Version bumps. Ebuilds by Arfrever.

*tuxonice-sources-3.10.52 (09 Aug 2014)
*tuxonice-sources-3.14.16 (09 Aug 2014)
*tuxonice-sources-3.15.9 (09 Aug 2014)
*tuxonice-sources-3.4.102 (09 Aug 2014)

  09 Aug 2014; Mike Gilbert <floppym@gentoo.org>
  +tuxonice-sources-3.10.52.ebuild, +tuxonice-sources-3.14.16.ebuild,
  +tuxonice-sources-3.15.9.ebuild, +tuxonice-sources-3.4.102.ebuild: