@@ -1,6 +1,13 @@
 # ChangeLog for sys-kernel/tuxonice-sources
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/tuxonice-sources/ChangeLog,v 1.205 2014/09/22 21:04:23 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/tuxonice-sources/ChangeLog,v 1.206 2014/10/01 19:09:47 floppym Exp $
+
+*tuxonice-sources-3.4.104 (01 Oct 2014)
+*tuxonice-sources-3.12.29 (01 Oct 2014)
+
+  01 Oct 2014; Mike Gilbert <floppym@gentoo.org>
+  +tuxonice-sources-3.12.29.ebuild, +tuxonice-sources-3.4.104.ebuild:
+  Version bumps. Ebuilds by Arfrever.
 
 *tuxonice-sources-3.14.19 (22 Sep 2014)
 *tuxonice-sources-3.16.3 (22 Sep 2014)
